WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
284774
AX: aria-labelledby uses referenced checkbox value instead of name
https://bugs.webkit.org/show_bug.cgi?id=284774
Summary
AX: aria-labelledby uses referenced checkbox value instead of name
Curtis Wilcox
Reported
2024-12-16 13:35:56 PST
Created
attachment 473578
[details]
reduced case example of the problem, with variants that do not have the problem Using VoiceOver on macOS Sonoma 14.7 with Safari 18.2, when `aria-labelledby` on a `<button>` references the id of a `checkbox`, it reads the checkbox's `value` as the button's name instead of the checkbox's name in the accessibility tree when the name comes from an explicitly associated `<label>` element. In the web rotor, the button's name is displayed as the checkbox's name bracketed between its value (e.g. "1 Filter One 1"). This problem does not occur when the referenced input is a 'radio' instead of a 'checkbox'. It does not occur when the 'checkbox' is named using `aria-label` or `aria-labelledby`. I can reproduce the problem in Safari Technology Preview Release 209. I can't reproduce the problem on iOS 18.2. In Safari 17.4.1 on macOS Sonoma 14.4.1, the web rotor name matches the announced name, the value of the checkbox (e.g. "1"). Reduced case attached and at this URL:
https://codepen.io/ccwilcox/pen/QwLdgjO/9ec89d6a8fc4c25b86a907b90bb4f8f0
Attachments
reduced case example of the problem, with variants that do not have the problem
(5.98 KB, text/html)
2024-12-16 13:35 PST
,
Curtis Wilcox
no flags
Details
corrected reduced case example of the problem with checkboxes and radio buttons
(6.13 KB, text/html)
2024-12-17 06:37 PST
,
Curtis Wilcox
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-12-16 13:36:08 PST
<
rdar://problem/141564913
>
Curtis Wilcox
Comment 2
2024-12-17 06:37:10 PST
Created
attachment 473582
[details]
corrected reduced case example of the problem with checkboxes and radio buttons
Curtis Wilcox
Comment 3
2024-12-17 06:38:06 PST
My apologies, radio buttons *do* have the same problem. There was an error in my reduced case, it's been corrected at the Codepen URL and in the corrected attachment.
Tyler Wilcock
Comment 4
2026-01-18 21:11:12 PST
Pull request:
https://github.com/WebKit/WebKit/pull/56809
EWS
Comment 5
2026-01-20 12:02:28 PST
Committed
305894@main
(c4647c597529): <
https://commits.webkit.org/305894@main
> Reviewed commits have been landed. Closing PR #56809 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug