AX: aria-labelledby uses referenced checkbox value instead of name https://bugs.webkit.org/show_bug.cgi?id=284774 rdar://141564913

Reviewed by Chris Fleizach.

When computing accessible names for aria-labelledby references, checkboxes
and radio buttons incorrectly returned their value attribute instead of
their label text. Fix by looking up associated label elements for these
input types.

Test: accessibility/aria-labelledby-on-checkbox.html

* LayoutTests/accessibility/aria-labelledby-on-checkbox-expected.txt: Added.
* LayoutTests/accessibility/aria-labelledby-on-checkbox.html: Added.
* Source/WebCore/accessibility/AccessibilityNodeObject.cpp:
(WebCore::accessibleNameForNode):

Canonical link: https://commits.webkit.org/305894@main